--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -52,7 +52,9 @@
                         <h2 id="titre_2">Le BUT Informatique : une valeur sure</h2>
                         <img src="images/info TP.jpg" alt="Image IUT" class="accueil_image">
                         <p> Ce site aide à informer les étudiants, lycéens, parents, professionnels sur la formation de BUT Informatique. 
-                                Pour cela, ce site contient plusieurs pages, une page de présentation générale, une page de témoignages, une page qui contient la liste des I.U.T proposant cette formation, une page qui nous présente et enfin une page qui permet de nous contacter en cas de besoin. 
+                            Il décrit les caractèristiques du BUT Informatique et comment s'organise la formation. 
+                                Pour cela, ce site contient plusieurs pages, une page de présentation générale, une page de témoignages, une page qui contient la liste des I.U.T proposant cette formation, une page qui nous présente, une page qui permet de nous contacter en cas de besoin et enfin une page qui vous présente les avantages que peut avoir le BUT Informatique sur vous selon votre profil. 
+                                Nous esperons que vous trouverez toutes les information que vous aurez besoins.  
                         </p>
                 </div> 
             </div>
