--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -447,7 +447,10 @@
                         </div>
                     </div>
                     <div id="no22">
-                        <h2>IUT de Lens</h2>
+                        <h2>IUT de Lens</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "http://www.iut-lens.univ-artois.fr/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut de lens.jpg" alt="IUT de Lens">
                         </div>
@@ -464,7 +467,10 @@
                         </div>
                     </div>
                     <div id="no23">
-                        <h2>IUT de Valenciennes</h2>
+                        <h2>IUT de Valenciennes</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://www.uphf.fr/IUT/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut de valenciennes site maubeuge.jpg" alt="IUT de Valenciennes site de Maubeuge">
                         </div>
@@ -480,7 +486,10 @@
                         </div>
                     </div>
                     <div id="no24">
-                        <h2>IUT de Reims-Châlons-Charleville</h2>
+                        <h2>IUT de Reims-Châlons-Charleville</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://www.iut-rcc.fr/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut reims-chalons-charleville site charleville.jpg" alt="IUT de Reims-Châlons-Charleville site de Charleville">
                         </div>
@@ -496,7 +505,10 @@
                         </div>
                     </div>
                     <div id="no25">
-                        <h2>IUT de Metz</h2>
+                        <h2>IUT de Metz</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "http://iut-metz.univ-lorraine.fr/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut de metz.jpg" alt="IUT de Metz">
                         </div>
@@ -513,7 +525,10 @@
                         </div>
                     </div>
                     <div id="no26">
-                        <h2>IUT Nancy-Charlemagne</h2>
+                        <h2>IUT Nancy-Charlemagne</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iut-charlemagne.univ-lorraine.fr/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut nancy charlemagne.jpg" alt="IUT de Nancy-Charlemagne">
                         </div>
@@ -530,7 +545,10 @@
                         </div>
                     </div>
                     <div id="no27">
-                        <h2>IUT d'Illkirch</h2>
+                        <h2>IUT d'Illkirch</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iutrs.unistra.fr/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut illkirch.jpg" alt="IUT Robert Schuman d'Illkirch">
                         </div>
@@ -546,7 +564,10 @@
                         </div>
                     </div>
                     <div id="no28">
-                        <h2>IUT Saint-Dié</h2>
+                        <h2>IUT Saint-Dié</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iutsd.univ-lorraine.fr/" > Aller sur la page </a>
+                        </div>  
                         <div id="iut_images">
                             <img src="images/iut saint dié.jpg" alt="IUT Saint-Dié">
                         </div>
@@ -563,7 +584,10 @@
                         </div>
                     </div>
                     <div id="no29">
-                        <h2>IUT Belfort-Monbéliard</h2>
+                        <h2>IUT Belfort-Monbéliard</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "http://www.iut-bm.univ-fcomte.fr/" > Aller sur la page </a>
+                        </div>    
                         <div id="iut_images">
                             <img src="images/iut belfort-montbéliard.jpg" alt="IUT Belfort-Monbéliard">
                         </div>
@@ -579,7 +603,10 @@
                         </div>
                     </div>
                     <div id="no30">
-                        <h2>IUT de Dijon-Auxerre</h2>
+                        <h2>IUT de Dijon-Auxerre</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iutdijon.u-bourgogne.fr/www/" > Aller sur la page </a>
+                        </div>   
                         <div id="iut_images">
                             <img src="images/iut de dijon.jpg" alt="IUT de Dijon-Auxerre">
                             <img src="images/iut de dijon antenne nevers.jpg" alt="IUT de Dijon-Auxerre antenne de Nevers">
@@ -601,7 +628,10 @@
                         </div>
                     </div>
                     <div id="no31">
-                        <h2>IUT de Villetaneuse</h2>
+                        <h2>IUT de Villetaneuse</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iutv.univ-paris13.fr/" > Aller sur la page </a>
+                        </div>  
                         <div id="iut_images">
                             <img src="images/iut de villetaneuse.jpg" alt="IUT de Villetaneuse">
                         </div>
@@ -617,7 +647,10 @@
                         </div>
                     </div>
                     <div id="no32">
-                        <h2>IUT de Montreuil</h2>
+                        <h2>IUT de Montreuil</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://www.iut.univ-paris8.fr/" > Aller sur la page </a>
+                        </div>  
                         <div id="iut_images">
                             <img src="images/iut de montreuil.jpg" alt="IUT de Montreuil">
                         </div>
@@ -633,7 +666,10 @@
                         </div>
                     </div>
                     <div id="no33">
-                        <h2>IUT de Marne la Vallée</h2>
+                        <h2>IUT de Marne la Vallée</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iut.univ-gustave-eiffel.fr//" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut de marne-la-vallée.jpg" alt="IUT de Marne la Vallée">
                         </div>
@@ -648,7 +684,10 @@
                         </div>
                     </div>
                     <div id="no34">
-                        <h2>IUT de Paris Decartes</h2>
+                        <h2>IUT de Paris Decartes</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iutparis-seine.u-paris.fr/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut de paris-decartes.jpg" alt="IUT de Paris-Decartes">
                         </div>
@@ -664,8 +703,11 @@
                             </div>
                         </div>
                     </div>
-                    <div id="no35">
-                        <h2>IUT de Vézily</h2>
+                    <div id="no35"> 
+                        <h2>IUT de Vézily</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "www.iut-velizy-rambouillet.uvsq.fr" > Aller sur la page </a>
+                        </div>  
                         <div id="iut_images">
                             <img src="images/iut de vézily.jpg" alt="IUT de Vézily">
                         </div>
@@ -681,7 +723,10 @@
                         </div>
                     </div>
                     <div id="no36">
-                        <h2>IUT d'Orsay</h2>
+                        <h2>IUT d'Orsay</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://www.iut-orsay.universite-paris-saclay.fr/" > Aller sur la page </a>
+                        </div>  
                         <div id="iut_images">
                             <img src="images/iut d'orsay.jpg" alt="IUT de d'Orsay">
                         </div>
@@ -698,6 +743,10 @@
                     </div>
                     <div id="no37">
                         <h2>IUT Sénart-Fontainebleau</h2>
+                        <div id="boutton_blanc"> 
+                            <a href = "https://www.iutsf.u-pec.fr/" > Aller sur la page </a>
+                        </div> 
+                         
                         <div id="iut_images">
                             <img src="images/iut sénart-fontainebleau.jpg" alt="IUT Sénart-Fontainebleau site Sénart">
                         </div>
@@ -713,7 +762,10 @@
                         </div>
                     </div>
                     <div id="no38">
-                        <h2>IUT d'Orléans</h2>
+                        <h2>IUT d'Orléans</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://www.univ-orleans.fr/fr/iut-orleans" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut d'orléans.jpg" alt="IUT d'Orléans">
                         </div>
@@ -730,7 +782,10 @@
                         </div>
                     </div>
                     <div id="no39">
-                        <h2>IUT de Clermont-Ferrand</h2>
+                        <h2>IUT de Clermont-Ferrand</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iut.uca.fr/" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut de clermont-ferrand.jpg" alt="IUT de Clermont-Ferrand">
                             <img src="images/iut de clermont-ferrand antenne du puy.jpg" alt="IUT de Clermont-Ferrand antenne du Puy">
@@ -755,7 +810,10 @@
                         </div>
                     </div>
                     <div id="no40">
-                        <h2>IUT du Limousin</h2>
+                        <h2>IUT du Limousin</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://iut.unilim.fr" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut du limousin site de limoges.jpg" alt="IUT du Limousin site de Limoges">
                         </div>
@@ -767,7 +825,10 @@
                         </div>
                     </div>
                     <div id="no41">
-                        <h2>IUT Rodez</h2>
+                        <h2>IUT Rodez</h2> 
+                        <div id="boutton_blanc"> 
+                            <a href = "https://www.iut-rodez.fr/fr" > Aller sur la page </a>
+                        </div> 
                         <div id="iut_images">
                             <img src="images/iut rodez.jpg" alt="IUT Rodez">
                         </div>
