--- a/public/page7_profils.html
+++ b/public/page7_profils.html
@@ -43,7 +43,9 @@
             <div id = "contenu_page" class="bordure"> 
                 <h1 id="titre_1"> Profils </h1> 
             
-                <p> Cette page est consacrée aux professionnels, professeurs, parents, et étudiants en reconversion, pour plus cibler vos attentes, et répondre le plus clairement possible à vos demande d'information </p> 
+                <p> Cette page est consacrée aux professionnels, professeurs, parents, et étudiants en reconversion, pour plus cibler vos attentes, et répondre le plus clairement possible à vos demande d'information 
+                    Elle explique les avantages que peut avoir BUT Informatique sur vous selon votre profil. 
+                </p> 
 
                 <h2> Professionnels </h2> 
 
