--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -46,7 +46,6 @@
                         </ul>
                     </ul>
                 </div>
-    
                 <div id="contenu_page" class="bordure">
                     <div id="accueil_contenu">
                         <h1 id="titre_1" role="heading" aria-level="2">Bienvenue sur notre site !</h1>
@@ -59,7 +58,7 @@
                 </div>
     
                 <div id="fleche">
-                    <a href="#" role="link"><img src="images/img_109187.png" alt="Fleche" role="img"></a>
+                    <a href="#" role="button"><img src="images/img_109187.png" alt="Fleche" role="img"></a>
                 </div>
                 <!-------- Bas de page -------->
                 <footer role="contentinfo">
