--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -108,7 +108,7 @@
                 </div> 
     
                 <div id="fleche">
-                    <a href="#" role="link"><img src="images/img_109187.png" alt="Fleche" role="img"></a>
+                    <a href="#" role="button"><img src="images/img_109187.png" alt="Fleche" role="img"></a>
                 </div>
                 
                 <!-------- Bas de page -------->
