--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -41,7 +41,7 @@
                 <ul>
                     <li><a href="#titre_1">Bienvenue sur notre site !</a></li>
                     <ul>
-                        <li><a href="#titre_2">Le BUT Informatique : une valeur sure</a></li>
+                        <li><a href="#titre_2">Le BUT Informatique : une valeur sûre </a></li>
                     </ul>
                 </ul>
             </div>
@@ -49,12 +49,12 @@
             <div id="contenu_page" class="bordure">
                 <div id="accueil_contenu">
                     <h1 id="titre_1">Bienvenue sur notre site !</h1>
-                        <h2 id="titre_2">Le BUT Informatique : une valeur sure</h2>
+                        <h2 id="titre_2">Le BUT Informatique : une valeur sûre </h2>
                         <img src="images/info TP.jpg" alt="Image IUT" class="accueil_image">
                         <p> Ce site aide à informer les étudiants, lycéens, parents, professionnels sur la formation de BUT Informatique. 
                             Il décrit les caractèristiques du BUT Informatique et comment s'organise la formation. 
                                 Pour cela, ce site contient plusieurs pages, une page de présentation générale, une page de témoignages, une page qui contient la liste des I.U.T proposant cette formation, une page qui nous présente, une page qui permet de nous contacter en cas de besoin et enfin une page qui vous présente les avantages que peut avoir le BUT Informatique sur vous selon votre profil. 
-                                Nous esperons que vous trouverez toutes les information que vous aurez besoins.  
+                                Nous esperons que vous trouverez toutes les informations dont vous aurez besoin.  
                         </p>
                 </div> 
             </div>
