--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -74,7 +74,7 @@
                 <p> Depuis des années, le DUT Informatique (Diplôme Universitaire de technologie) a enseigné à des étudiants les matières informatiques et générales. Il y avait environ chaque année 70%  des étudiants qui provenaient de BAC général et 30% de BAC technologique. L’effectif était alors d’environ de 8886 étudiants (chiffres prélevés sur : https://www.letudiant.fr/etudes/dut/dut-informatique.html). 
                 </p> 
 
-                <p> Depuis cette année, la formation a été remplacé par le BUT Informatique (Bachelor Universitaire de Technologie). La formation est donc passée de 2 ans à 3 ans. 
+                <p> Depuis cette année, la formation a été remplacée par le BUT Informatique (Bachelor Universitaire de Technologie). La formation est donc passée de 2 ans à 3 ans. 
                 Pour en savoir plus sur les changements et différences des deux formations vous pouvez vous rendre sur ce <a href="http://etudiant.aujourdhui.fr/etudiant/info/diplomes-le-dut-devient-le-but-bachelor-universitaire-de-technologie.html">site</a>. 
                 </p> 
 
