--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -826,10 +826,7 @@
                         </div>
                     </div>
                     <div id="no41">
-                        <h2 role="heading" aria-level="3">IUT Rodez</h2> 
-                        <div id="boutton_blanc"> 
-                            <a href = "https://www.iut-rodez.fr/fr" > Aller sur la page </a>
-                        </div> 
+                        <h2 role="heading" aria-level="3"> <a href = "https://www.iut-rodez.fr/fr" > IUT Rodez </a></h2> 
                         <div id="iut_images">
                             <img src="images/iut rodez.jpg" alt="IUT Rodez" role="img">
                         </div>
