--- a/public/page5_Liste_des_IUT.html
+++ b/public/page5_Liste_des_IUT.html
@@ -826,7 +826,7 @@
                         </div>
                     </div>
                     <div id="no41">
-                        <h2 role="heading" aria-level="3"> <a href = "https://www.iut-rodez.fr/fr" > IUT Rodez </a></h2> 
+                        <h2 role="heading" aria-level="3"> <a href = "https://www.iut-rodez.fr/fr" role="link"> IUT Rodez </a></h2> 
                         <div id="iut_images">
                             <img src="images/iut rodez.jpg" alt="IUT Rodez" role="img">
                         </div>
