--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -51,9 +51,8 @@
                         <h1 id="titre_1">Bienvenue sur notre site !</h1>
                             <h2 id="titre_2">Le BUT Informatique : une valeur sûre </h2>
                             <div id="accueil_image">
-                                <img src="images/info TP.jpg" alt="Image IUT">
+                                <img src="images/info TP.jpg" alt="Image IUT" role="img">
                             </div>
-                            <img src="images/info TP.jpg" alt="Image IUT" class="accueil_image" role="img">
                             <p> Ce site aide à informer les étudiants, lycéens, parents, professionnels sur la formation de BUT Informatique. 
                                 Il décrit les caractèristiques du BUT Informatique et comment s'organise la formation. 
                                 Pour cela, ce site contient plusieurs pages, une page de présentation générale, une page de témoignages, une page qui contient la liste des I.U.T proposant cette formation, une page qui nous présente, une page qui permet de nous contacter en cas de besoin et enfin une page qui vous présente les avantages que peut avoir le BUT Informatique sur vous selon votre profil. 
@@ -63,7 +62,7 @@
                 </div>
 
                 <div id="fleche">
-                    <a href="#"><img src="images/img_109187.png"></a>
+                    <a href="#" role="button"><img src="images/img_109187.png" alt="Fleche" role="img"></a>
                 </div>
                 <!-------- Bas de page -------->
                 <footer role="contentinfo">
