--- a/public/page6_contact.html
+++ b/public/page6_contact.html
@@ -12,7 +12,7 @@
                 <div id="header">
                     <header role="banner">
                         <div id="fond_bleu">
-                            <p role="heading" aria-level="1">< BUT class="Informatique" /></p>
+                            <p role="heading" aria-level="1">< BUT Informatique /></p>
                         </div>
                         <div id="fond_image"></div>
                     </header>
