--- a/public/page1_accueil.html
+++ b/public/page1_accueil.html
@@ -55,7 +55,7 @@
                             </div>
                             <p> Ce site aide à informer les étudiants, lycéens, parents, professionnels sur la formation de BUT Informatique. 
                                 Il décrit les caractèristiques du BUT Informatique et comment s'organise la formation. 
-                                Pour cela, ce site contient plusieurs pages, une page de présentation générale, une page de témoignages, une page qui contient la liste des I.U.T proposant cette formation, une page qui nous présente, une page qui permet de nous contacter en cas de besoin et enfin une page qui vous présente les avantages que peut avoir le BUT Informatique sur vous selon votre profil. 
+                                Pour cela, ce site contient plusieurs pages, une page de présentation générale, une page de témoignages, une page qui contient la liste des I.U.T proposant cette formation, une page qui nous présente, une page qui permet de nous contacter en cas de besoin et enfin une page qui vous présente les avantages du BUT Informatique selon votre profil. 
                                 Nous esperons que vous trouverez toutes les informations dont vous aurez besoin.  
                             </p>
                     </div> 
