--- a/public/page2_qu'est_ce_que_le_but.html
+++ b/public/page2_qu'est_ce_que_le_but.html
@@ -95,7 +95,7 @@
 					
 					<ul role="list"> 
 						<li  role="listitem"> <p> <strong> RÉSULTATS ACADÉMIQUES </strong> </p> 
-							<p> <strong> Résultats obtenus en première et en terminale principalement pour les matières : <strong> 
+							<p> <strong> Résultats obtenus en première et en terminale principalement pour les matières : </strong> 
 							Mathématiques, LV1 , Français et Spécialité informatique le cas échéant </p> 
 						</li> 
 						
